--- a/index.html
+++ b/index.html
@@ -65,14 +65,16 @@
                     <div>
                         Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                     </div>
-                    <a href="" class="a-btn">
+                    <a href="#" class="a-btn">
                         Inizia la tua prova gratuita
                     </a>
                     <div class="cancel">
                         Annulla in qualsiasi momento
                     </div>
                     <div class="arrow">
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <a href="#bsn-anchor">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="heroimg-img">
@@ -87,7 +89,7 @@
 
             <div class="container2">
                 
-                <div class="bsn-title">
+                <div id="bsn-anchor" class="bsn-title">
                     <h2>
                         Trova il piano di business che fa per te
                     </h2>
@@ -316,7 +318,7 @@
             </div>
 
         </section>
-        <!-- /Piano di business -->
+        <!-- /Piano business -->
 
         <section>
 
@@ -451,7 +453,7 @@
             </div>
 
         </section>
-        <!-- /Operazioni -->
+        <!-- /Operazioni Business -->
 
         <section>
 
@@ -606,7 +608,7 @@
 
 
         </section>
-        <!-- /Domande frequenti -->
+        <!-- /FAQ -->
 
     </main>
     <!-- /Main -->
@@ -621,19 +623,19 @@
                 </h3>
                 <ul>
                     <li>
-                        <a href="">Applicazione Desktop</a>
+                        <a href="#">Applicazione Desktop</a>
                     </li>
                     <li>
-                        <a href="">Perché Dropbox</a>
+                        <a href="#">Perché Dropbox</a>
                     </li>
                     <li>
-                        <a href="">Piani</a>
+                        <a href="#">Piani</a>
                     </li>
                     <li>
-                        <a href="">Sicurezza</a>
+                        <a href="#">Sicurezza</a>
                     </li>
                     <li>
-                        <a href="">Funzioni</a>
+                        <a href="#">Funzioni</a>
                     </li>
                 </ul>
             </div>
@@ -643,19 +645,19 @@
                 </h3>
                 <ul>
                     <li>
-                        <a href="">Applicazione Desktop</a>
+                        <a href="#">Applicazione Desktop</a>
                     </li>
                     <li>
-                        <a href="">Perché Dropbox</a>
+                        <a href="#">Perché Dropbox</a>
                     </li>
                     <li>
-                        <a href="">Piani</a>
+                        <a href="#">Piani</a>
                     </li>
                     <li>
-                        <a href="">Sicurezza</a>
+                        <a href="#">Sicurezza</a>
                     </li>
                     <li>
-                        <a href="">Funzioni</a>
+                        <a href="#">Funzioni</a>
                     </li>
                 </ul>
             </div>
@@ -665,19 +667,19 @@
                 </h3>
                 <ul>
                     <li>
-                        <a href="">Applicazione Desktop</a>
+                        <a href="#">Applicazione Desktop</a>
                     </li>
                     <li>
-                        <a href="">Perché Dropbox</a>
+                        <a href="#">Perché Dropbox</a>
                     </li>
                     <li>
-                        <a href="">Piani</a>
+                        <a href="#">Piani</a>
                     </li>
                     <li>
-                        <a href="">Sicurezza</a>
+                        <a href="#">Sicurezza</a>
                     </li>
                     <li>
-                        <a href="">Funzioni</a>
+                        <a href="#">Funzioni</a>
                     </li>
                 </ul>
             </div>
@@ -687,19 +689,19 @@
                 </h3>
                 <ul>
                     <li>
-                        <a href="">Applicazione Desktop</a>
+                        <a href="#">Applicazione Desktop</a>
                     </li>
                     <li>
-                        <a href="">Perché Dropbox</a>
+                        <a href="#">Perché Dropbox</a>
                     </li>
                     <li>
-                        <a href="">Piani</a>
+                        <a href="#">Piani</a>
                     </li>
                     <li>
-                        <a href="">Sicurezza</a>
+                        <a href="#">Sicurezza</a>
                     </li>
                     <li>
-                        <a href="">Funzioni</a>
+                        <a href="#">Funzioni</a>
                     </li>
                 </ul>
             </div>
@@ -709,19 +711,19 @@
                 </h3>
                 <ul>
                     <li>
-                        <a href="">Applicazione Desktop</a>
+                        <a href="#">Applicazione Desktop</a>
                     </li>
                     <li>
-                        <a href="">Perché Dropbox</a>
+                        <a href="#">Perché Dropbox</a>
                     </li>
                     <li>
-                        <a href="">Piani</a>
+                        <a href="#">Piani</a>
                     </li>
                     <li>
-                        <a href="">Sicurezza</a>
+                        <a href="#">Sicurezza</a>
                     </li>
                     <li>
-                        <a href="">Funzioni</a>
+                        <a href="#">Funzioni</a>
                     </li>
                 </ul>
             </div>
