--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="links">
                     <a href="#">Supporto</a>
                     <a href="#">Contatta l'ufficio vendite</a>
-                    <a href="#">Accedi</a>
+                    <a href="/login.html">Accedi</a>
                 </div>
                 <a href="#" class="a-btn">
                     Inizia
