pagina login prima bozza

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="heroimg-img">
-                    <img src="./img/jumbo.png" alt="hero image">
+                    <img src="./img/jumbo.png" alt="dropbox hero image">
                 </div>
             </div>
 
@@ -325,7 +325,7 @@
             <div class="partner container2 d-flex">
 
                 <div class="img">
-                    <img src="./img/partner.png" alt="business partner">
+                    <img src="./img/partner.png" alt="business stock image">
                 </div>
 
                 <div class="par">
@@ -360,7 +360,7 @@
 
                     <div class="operaz-item">
                         <div class="operaz-card-img">
-                            <img src="./img/business-feature-switching-tools.png" alt="">
+                            <img src="./img/business-feature-switching-tools.png" alt="stock image">
                         </div>
                         <div class="operaz-card-title">
                             <h2>
@@ -375,7 +375,7 @@
                     
                     <div class="operaz-item">
                         <div class="operaz-card-img">
-                            <img src="./img/business-feature-send-files-it.png" alt="">
+                            <img src="./img/business-feature-send-files-it.png" alt="stock image">
                         </div>
                         <div class="operaz-card-title">
                             <h2>
@@ -390,7 +390,7 @@
 
                     <div class="operaz-item">
                         <div class="operaz-card-img">
-                            <img src="./img/business-feature-coordinate-it.png" alt="">
+                            <img src="./img/business-feature-coordinate-it.png" alt="stock image">
                         </div>
                         <div class="operaz-card-title">
                             <h2>
@@ -405,7 +405,7 @@
 
                     <div class="operaz-item">
                         <div class="operaz-card-img">
-                            <img src="./img/business-feature-integrations-it.png" alt="">
+                            <img src="./img/business-feature-integrations-it.png" alt="stock image">
                         </div>
                         <div class="operaz-card-title">
                             <h2>
@@ -420,7 +420,7 @@
 
                     <div class="operaz-item">
                         <div class="operaz-card-img">
-                            <img src="./img/business-feature-multi-device.png" alt="">
+                            <img src="./img/business-feature-multi-device.png" alt="stock image">
                         </div>
                         <div class="operaz-card-title">
                             <h2>
@@ -435,7 +435,7 @@
 
                     <div class="operaz-item">
                         <div class="operaz-card-img">
-                            <img src="./img/business-feature-security.png" alt="">
+                            <img src="./img/business-feature-security.png" alt="stock image">
                         </div>
                         <div class="operaz-card-title">
                             <h2>
