--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dropbox Business</title>
+    <title>Login - Dropbox</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +51,33 @@
     </header>
     <!-- /Header -->
 
-    <main class="debug2">
+    <main>
+
+        <div class="login-container">
+
+            <div>
+                Login or Sign up
+            </div>
+
+            <div>
+                <button class="google-btn">
+                    <img src="./img/google-logo.jpg" alt="google logo">
+                    Continue with Google
+                </button>
+            </div>
+
+            <div>
+                <button class="apple-btn">
+                    <img src="./img/apple-logo.webp" alt="apple logo">
+                    Continue with Apple
+                </button>
+            </div>
+
+            <div>
+                Email
+            </div>
+
+        </div>
 
     </main>
     <!-- /Header -->
