--- a/login.html
+++ b/login.html
@@ -53,34 +53,46 @@
 
     <main>
 
-        <div class="login-container">
+        <div class="login-container d-flex">
 
             <div>
-                Login or Sign up
-            </div>
-
-            <div>
-                <button class="google-btn">
-                    <img src="./img/google-logo.jpg" alt="google logo">
-                    Continue with Google
-                </button>
-            </div>
-
-            <div>
-                <button class="apple-btn">
-                    <img src="./img/apple-logo.webp" alt="apple logo">
-                    Continue with Apple
-                </button>
-            </div>
-
-            <div>
-                Email
+                <div>
+                    Log in or sign up
+                </div>
+                <div class="btn">
+                    <button class="google-btn d-flex">
+                        <img src="./img/google-logo.jpg" alt="google logo">
+                        <div>
+                            Continue with Google
+                        </div>
+                    </button>
+                </div>
+                <div class="btn">
+                    <button class="apple-btn d-flex">
+                        <img src="./img/apple-logo.webp" alt="apple logo">
+                        <div>
+                            Continue with Apple
+                        </div>
+                    </button>
+                </div>
+                <div class="email">
+                    Email
+                </div>
+                <div class="email">
+                    <input type="email" id="email">
+                </div>
+                <div  class="btn">
+                    <button>
+                        Continua
+                    </button>
+                </div>
             </div>
 
         </div>
+        <!-- /Login section -->
 
     </main>
-    <!-- /Header -->
+    <!-- /Main -->
 
     <footer>
 
