--- a/login.html
+++ b/login.html
@@ -56,9 +56,10 @@
         <div class="login-container d-flex">
 
             <div>
-                <div>
+                <div class="text">
                     Log in or sign up
                 </div>
+
                 <div class="btn">
                     <button class="google-btn d-flex">
                         <img src="./img/google-logo.jpg" alt="google logo">
@@ -67,6 +68,7 @@
                         </div>
                     </button>
                 </div>
+
                 <div class="btn">
                     <button class="apple-btn d-flex">
                         <img src="./img/apple-logo.webp" alt="apple logo">
@@ -75,14 +77,24 @@
                         </div>
                     </button>
                 </div>
-                <div class="email">
+
+                <div class="line d-flex">
+                    <hr>
+                    <div>
+                        or
+                    </div>
+                </div>
+
+                <div class="text">
                     Email
                 </div>
+
                 <div class="email">
                     <input type="email" id="email">
                 </div>
+
                 <div  class="btn">
-                    <button>
+                    <button class="d-flex">
                         Continua
                     </button>
                 </div>
