pagina login terminata

--- a/login.html
+++ b/login.html
@@ -56,27 +56,23 @@
         <div class="login-container d-flex">
 
             <div>
-                <div class="text">
+                <div class="title">
                     Log in or sign up
                 </div>
 
-                <div class="btn">
-                    <button class="google-btn d-flex">
-                        <img src="./img/google-logo.jpg" alt="google logo">
-                        <div>
-                            Continue with Google
-                        </div>
-                    </button>
-                </div>
+                <button class="google btn d-flex">
+                    <img src="./img/google-logo.svg" alt="google logo">
+                    <div>
+                        Continua con Google
+                    </div>
+                </button>
 
-                <div class="btn">
-                    <button class="apple-btn d-flex">
-                        <img src="./img/apple-logo.webp" alt="apple logo">
-                        <div>
-                            Continue with Apple
-                        </div>
-                    </button>
-                </div>
+                <button class="apple btn d-flex">
+                    <img src="./img/apple-logo.svg" alt="apple logo">
+                    <div>
+                        Continua con Apple
+                    </div>
+                </button>
 
                 <div class="line d-flex">
                     <hr>
@@ -85,7 +81,7 @@
                     </div>
                 </div>
 
-                <div class="text">
+                <div class="email-label">
                     Email
                 </div>
 
@@ -93,11 +89,10 @@
                     <input type="email" id="email">
                 </div>
 
-                <div  class="btn">
-                    <button class="d-flex">
-                        Continua
-                    </button>
-                </div>
+                <button class="continua">
+                    Continua
+                </button>
+
             </div>
 
         </div>
