--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
                 <div class="line d-flex">
                     <hr>
                     <div>
-                        or
+                        oppure
                     </div>
                 </div>
 
